<resources>
    <string name="app_name">Epicture</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="delete">delete</string>
    <string name="ad_fav">add to favorite</string>
    <string name="del_fav">delete from favorite</string>
    <string-array name="items">
        <item>Imgur</item>
        <item>Flickr</item>
    </string-array>
</resources>
