<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <Button
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="63dp"
        android:id="@+id/dialPicDelButton" />

    <Button
        android:text="@string/ad_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialAddFavButton"
        android:layout_above="@+id/dialPicCancelButton"
        android:layout_toEndOf="@+id/dialPicDelButton"
        android:layout_marginStart="65dp"
        android:visibility="gone"/>

    <Button
        android:text="@string/del_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialDelFavButton"
        android:layout_alignTop="@+id/dialAddFavButton"
        android:layout_alignEnd="@+id/dialAddFavButton"
        android:visibility="gone"/>


    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/dialPicCancelButton"
        android:layout_below="@+id/dialPicDelButton"
        android:layout_alignEnd="@+id/dialAddFavButton" />

</RelativeLayout>