<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="189dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:id="@+id/imageViewApi" />

    <TextView
        android:text="@string/username"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewApi"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:id="@+id/textViewConnectUsername" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textViewConnectUsername"
        android:layout_below="@+id/imageViewApi"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:id="@+id/editViewConnectUsername" />

    <TextView
        android:text="@string/password"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editViewConnectUsername"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:id="@+id/textViewConnectPassword" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/textViewConnectPassword"
        android:layout_below="@id/editViewConnectUsername"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:id="@+id/editViewConnectPassword"/>

    <Button
        android:text="@string/connect"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/editViewConnectPassword"
        android:id="@+id/buttonConnectOk"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignEnd="@id/editViewConnectPassword"
        />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/editViewConnectPassword"
        android:layout_toStartOf="@id/buttonConnectOk"
        android:id="@+id/buttonConnectCancel"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    </RelativeLayout>
